tests/ui/test-attrs/test-attr-non-associated-functions.stderr
error: the `#[test]` attribute may only be used on a non-associated function
  --> $DIR/test-attr-non-associated-functions.rs:6:5
   |
LL |     #[test]
   |     ^^^^^^^ the `#[test]` macro causes a function to be run as a test and has no effect on non-functions
   |
help: replace with conditional compilation to make the item only exist when tests are being run
   |
LL -     #[test]
LL +     #[cfg(test)]
   |

error: the `#[test]` attribute may only be used on a non-associated function
  --> $DIR/test-attr-non-associated-functions.rs:11:5
   |
LL |     #[test]
   |     ^^^^^^^ the `#[test]` macro causes a function to be run as a test and has no effect on non-functions
   |
help: replace with conditional compilation to make the item only exist when tests are being run
   |
LL -     #[test]
LL +     #[cfg(test)]
   |

error: aborting due to 2 previous errors

